5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1595_1015.log
== TEST (2019-03-30 21:27:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro número: ")
var2 = input("Informe o segundo número: ")
var3 = input("Informe o terceiro número")

num1 = int(var1)
num2 = inte(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    num2 = inte(var2)
NameError: name 'inte' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:27:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro numero: ")
var2 = input("Informe o segundo numero: ")
var3 = input("Informe o terceiro numero: ")

num1 = int(var1)
num2 = inte(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    num2 = inte(var2)
NameError: name 'inte' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:28:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro numero: ")
var2 = input("Informe o segundo numero: ")
var3 = input("Informe o terceiro numero: ")

num1 = int(var1)
num2 = int(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    num2 = inte(var2)
NameError: name 'inte' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:28:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro numero: ")
var2 = input("Informe o segundo numero: ")
var3 = input("Informe o terceiro numero: ")

num1 = int(var1)
num2 = int(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
maior = max(var1, var2, var3)

print (menor)
print (maior)
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:31:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro numero: ")
var2 = input("Informe o segundo numero: ")
var3 = input("Informe o terceiro numero: ")

num1 = int(var1)
num2 = int(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
meio = (var1 + var2 + var3) - (menor + maior)

print (menor, meio, maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    meio = (var1 + var2 + var3) - (menor + maior)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro numero: ")
var2 = input("Informe o segundo numero: ")
var3 = input("Informe o terceiro numero: ")

num1 = int(var1)
num2 = int(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
maior = max(var1, var2, var3)
meio = (num1 + num2 + num3) - (menor + maior)

print (menor, meio, maior)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    meio = (num1 + num2 + num3) - (menor + maior)
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:33:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro numero: ")
var2 = input("Informe o segundo numero: ")
var3 = input("Informe o terceiro numero: ")

num1 = int(var1)
num2 = int(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
me = int(menor)
maior = max(var1, var2, var3)
ma = int(maior)
meio = (num1 + num2 + num3) - (me + ma)

print (menor, meio, maior)
-- OUTPUT:
-2 0 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:34:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

var1 = input("Informe o primeiro numero: ")
var2 = input("Informe o segundo numero: ")
var3 = input("Informe o terceiro numero: ")

num1 = int(var1)
num2 = int(var2)
num3 = int(var3)

menor = min(var1, var2, var3)
me = int(menor)
maior = max(var1, var2, var3)
ma = int(maior)
meio = (num1 + num2 + num3) - (me + ma)

print (menor, meio, maior)
-- EXECUTION TIME:
0.189706
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 0 10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
